#3380 Liferay project for Eclipse plugin: - re-enable widgetset compilation for Liferay projects - add GWT JARs on the classpath when compiling a widgetset - get the required GWT version from a Vaadin JAR anywhere on the classpath - scan the whole classpath (including classpath container) for JARs needed for widgetset compilation - fix minor widget set compilation related bugs
git-svn-id: https://dev.vaadin.com/svn/integration/eclipse@15456 de684a11-831f-0410-ab27-cb86445eb682